# RigidBody2D-GL

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: custom-issue-template.md
include/physics/: ball.hpp  vec2.hpp  world.hpp
src/app/: benchmark.cpp  main.cpp
src/physics/: ball.cpp  world.cpp
